--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,9 @@
   "username": "postgres",
   "password": "postgres",
   "database": "gostack_gobarber",
+  "entities": [
+    "./src/app/entities/*.ts"
+  ],
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
