--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "express": "^4.17.1",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24",
-    "typeorm-naming-strategies": "^1.1.0",
-    "uuidv4": "^6.0.7"
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
