--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer-s3": "^2.9.0",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.2.0",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
